--- a/feuille.css
+++ b/feuille.css
@@ -1,10 +1,10 @@
+/* Images; images.nicolaspierre.name */
 *{margin:0;padding:0;}
 
 body{}
 
 h1,h2,h3{font-weight:normal;}
 
-/*h2{font-style:italic;}*/
 h3{margin-bottom:0.5em;}
 p{margin-bottom:1em;}
 
@@ -31,15 +31,8 @@ p{margin-bottom:1em;}
 .section.galerie img{max-width:100%;border:1px solid #666;padding:3px;}
 .section.galerie h3{margin-top:50px;}
 
-/*.section.licence .image{width:20%;float:left;}
-.section.licence  .image>div{padding:1em;}
-.section.licence  img{max-width:100%;border:1px solid #666;padding:3px;}*/
-
-
-
 .section.footer{padding:10em 0 0 0;}
 .section.footer>div{margin:0 2em;}
-
 
 .col{width:33.3%;float:left;}
 .col>div{margin:0 2em;}
